@@ -6,42 +6,27 @@ import java.util.List;
 
 import snakerunner.commons.Point2D;
 
-//public interface  Snake {
-//   public void move();
-
-//   public void setDirection(Direction direction);
-
-//    public Point2D<Integer, Integer> getHead();
-
-//    public List<Point2D<Integer, Integer>> getBody();
-
-//    public boolean isCollidingWithItself();
-
-//}
-
 /**
  * The Snake class represents the player's snake in the Snake Runner game.
  */
 public final class Snake {
 
     private static final int FIXED_SIZE = 5; //the lenght never changes
-    private final LinkedList<SnakeSegment> body = new LinkedList<>(); //the list
+    private final List<SnakeSegment> body = new LinkedList<>(); //the list
     private Direction currentDirection = Direction.RIGHT; //initial direction
 
     /**
      * Constructs a Snake object with the specified starting position.
-     * 
+     *
      * @param startPosition The starting position of the snake's head.
      */
     public Snake(final Point2D<Integer, Integer> startPosition) {
 
         for (int i = 0; i < FIXED_SIZE; i++) {
-            //we create the points, if the head is at point X the pieces behind are ate X-1, X-2 ETC
             final Point2D<Integer, Integer> p = new Point2D<>(startPosition.getX() - i, startPosition.getY());
-            //at first the will be empty cuz update logic () will fill them
             body.add(new SnakeSegment(p, SnakeSegment.SegmentType.BODY_STRAIGHT, null, null, null));
         }
-        updateLogic(); //makes head, tail and directions
+        updateLogic();
 
     }
 
@@ -50,11 +35,10 @@ public final class Snake {
      */
     public void move() {
         //actual head position
-        final Point2D<Integer, Integer> headPos = body.getFirst().pos;
+        final Point2D<Integer, Integer> headPos = body.get(0).getPos();
         int nextX = headPos.getX();
         int nextY = headPos.getY();
 
-        //calculates new position base on where we are going
         switch (currentDirection) {
             case UP -> nextY -= 1;
             case DOWN -> nextY += 1;
@@ -62,19 +46,25 @@ public final class Snake {
             case RIGHT -> nextX += 1;
         }
 
-        //we add the new piece on top of the list (becomes the new head)
-        body.addFirst(new SnakeSegment(new Point2D<>(nextX, nextY), SnakeSegment.SegmentType.HEAD, currentDirection, null, null));
+        body.add(
+            0,
+            new SnakeSegment(
+                new Point2D<>(nextX, nextY),
+                SnakeSegment.SegmentType.HEAD,
+                currentDirection,
+                null,
+                null
+            )
+        );
 
-        //we remove the last piece so we maintain the 5 lenght
-        body.removeLast();
-        //we must redo who is he head, the tail etc.
+        body.remove(body.size() - 1);
         updateLogic();
 
     }
 
     /**
      * change direction so it doesn't turn 180 degrees.
-     * 
+     *
      * @param d the new direction of the snake.
      */
     public void setDirection(final Direction d) {
@@ -101,7 +91,7 @@ public final class Snake {
 
     /**
      * returns the current direction of the snake.
-     * 
+     *
      * @return the current direction of the snake.
      */
     public Direction getCurrentDirection() {
@@ -110,16 +100,16 @@ public final class Snake {
 
     /**
      * returns the head position.
-     * 
+     *
      * @return the head position of the snake.
      */
     public Point2D<Integer, Integer> getHead() {
-        return body.getFirst().pos;
+        return body.get(0).getPos();
     }
 
     /**
      * Return the list of the segment for the view to draw.
-     * 
+     *
      * @return the list of snake segments.
      */
     public List<SnakeSegment> getFullBody() {
@@ -128,13 +118,13 @@ public final class Snake {
 
     /**
      * collision with itself.
-     * 
+     *
      * @return true if the snake is colliding with itself, false otherwise.
      */
     public boolean isCollidingWithItself() {
-        final Point2D<Integer, Integer> head = body.getFirst().pos;
+        final Point2D<Integer, Integer> head = body.get(0).getPos();
         for (int i = 1; i < body.size(); i++) {
-            final Point2D<Integer, Integer> p = body.get(i).pos;
+            final Point2D<Integer, Integer> p = body.get(i).getPos();
             if (head.getX().equals(p.getX()) && head.getY().equals(p.getY())) {
                 return true;
             }
@@ -143,38 +133,37 @@ public final class Snake {
 
     }
 
-    //update logics
-    //this method decides what each piece should be.
+    /**
+     * Updates the visual state and orientation of each snake segment
+     * based on its position relative to neighboring segments.
+     */
     private void updateLogic() {
         if (body.isEmpty()) {
             return;
         }
 
         for (int i = 0; i < body.size(); i++) {
-            final Point2D<Integer, Integer> curr = body.get(i).pos;
+            final Point2D<Integer, Integer> curr = body.get(i).getPos();
 
-            //first case : it's the head
             if (i == 0) {
-                final Direction toTail = getRelativeDirection(curr, body.get(1).pos);
+                final Direction toTail = getRelativeDirection(curr, body.get(1).getPos());
                 body.set(i, new SnakeSegment(curr, SnakeSegment.SegmentType.HEAD, currentDirection, null, toTail));
 
-            }
-            //second case : it's the tail
-            else if (i == body.size() - 1) {
-                final Direction toHead = getRelativeDirection(curr, body.get(i - 1).pos);
+            } else if (i == body.size() - 1) {
+                final Direction toHead = getRelativeDirection(curr, body.get(i - 1).getPos());
                 body.set(i, new SnakeSegment(curr, SnakeSegment.SegmentType.TAIL, null, toHead, null));
 
-            }
-            //third case : it's the body
-            else {
-                final Point2D<Integer, Integer> prev = body.get(i - 1).pos; //toward the head
-                final Point2D<Integer, Integer> next = body.get(i + 1).pos; //toward the tail
+            } else {
+                final Point2D<Integer, Integer> prev = body.get(i - 1).getPos();
+                final Point2D<Integer, Integer> next = body.get(i + 1).getPos();
 
                 final Direction toHead = getRelativeDirection(curr, prev);
                 final Direction toTail = getRelativeDirection(curr, next);
 
-                //if prev dir and next dirr are on the same line it's going ahead, else is curving
-                final SnakeSegment.SegmentType t = isStraight(prev, next) ? SnakeSegment.SegmentType.BODY_STRAIGHT : SnakeSegment.SegmentType.BODY_CURVE;
+                final SnakeSegment.SegmentType t = isStraight(prev, next)
+                    ? SnakeSegment.SegmentType.BODY_STRAIGHT
+                    : SnakeSegment.SegmentType.BODY_CURVE;
+
                 body.set(i, new SnakeSegment(curr, t, null, toHead, toTail));
             }
         }
@@ -184,7 +173,6 @@ public final class Snake {
         return prev.getX().equals(next.getX()) || prev.getY().equals(next.getY());
     }
 
-    //given two close points, tells the direction of the seocnd one given the first
     private Direction getRelativeDirection(final Point2D<Integer, Integer> from, final Point2D<Integer, Integer> to) {
         if (to.getX() > from.getX()) {
             return Direction.RIGHT;
@@ -203,3 +191,5 @@ public final class Snake {
     }
 
 }
+
+
